# perplexity-hackathon-2025

./: .gitignore  main.py  pyproject.toml
data/: test_data.json
data/chunks/: test_chunks.txt
data/transcripts/: 1.txt
scripts/: download_youtube.py  search_test.py
src/: search.py  utils.py  video_processing.py
